[tool.poetry]
name = "task10-2"
version = "0.1.0"
description = ""
authors = ["Tatyana Karpenko <Tatyanna_ktp@mail.ru>"]
readme = "README.md"
packages = [{include = "task10"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
